--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fc_native_video_thumbnail_for_us
 description: A Flutter plugin for creating video thumbnails with native APIs.
-version: 0.4.0
+version: 0.4.0+1
 homepage: https://github.com/flutter-cavalry/fc_native_video_thumbnail_for_us
 
 environment:
@@ -35,7 +35,7 @@ flutter:
   plugin:
     platforms:
       android:
-        package: com.fluttercavalry.fc_native_video_thumbnail_for_us
+        package: com.fluttercavalry.fc_native_video_thumbnail
         pluginClass: FcNativeVideoThumbnailPlugin
       ios:
         pluginClass: FcNativeVideoThumbnailPlugin
