--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fc_native_video_thumbnail_for_us
 description: A Flutter plugin for creating video thumbnails with native APIs.
-version: 0.4.0+1
+version: 0.4.8
 homepage: https://github.com/flutter-cavalry/fc_native_video_thumbnail_for_us
 
 environment:
@@ -42,7 +42,7 @@ flutter:
       macos:
         pluginClass: FcNativeVideoThumbnailPlugin
       windows:
-        pluginClass: FcNativeVideoThumbnailPluginCApi
+        pluginClass: FcNativeVideoThumbnailForUsPluginCApi
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
