--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: fc_native_video_thumbnail_for_us
 description: A Flutter plugin for creating video thumbnails with native APIs.
-version: 0.4.8
-homepage: https://github.com/flutter-cavalry/fc_native_video_thumbnail_for_us
+version: 0.4.8+1
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
